# bookStore

./: README.md  create_superuser.py  db.sqlite3  pyproject.toml  requirements.txt
bookstore/: settings.py  urls.py
bookstore/bookstore/: settings.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: product_serializers.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/viewset/: __init__.py  category_viewset.py  product_viewset.py
