[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    {name = "Sérgio Adriano", email = "sergioadrianomc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "django-extensions (>=3.2.3,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
factory-boy = "^3.3.3"

